[screenlocker] Add emergency mode for greeter crashing

If the greeter crashes on startup ksld is caught in a restart loop which
causes 100 % CPU usage and makes it impossible to unlock the session.

With this change the greeter is only allowed to crash four times and
ksld goes into an emergency mode. This mode ensures that our black
background window gets shown with a message indicating how to unlock
using loginctl. This is rather technical but better than leaving the
system in a state which makes it impossible to unlock.

Directly unlocking in the error case is not an option as that could
be used to attack the screen locker infrastructure.

BUG: 351696
REVIEW: 124915